overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: arduino-greenhouse-client
spec:
  ingressClassName: nginx
  rules:
  - host: arduino.localdev.me
    http:
      paths:
      - backend:
          service:
            name: arduino-greenhouse-client
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - arduino.localdev.me
    secretName: arduino-greenhouse-client-ca
